--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <section class="page-section clearfix">
     <div class="container">
       <div class="intro">
-        <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/https://live.staticflickr.com/65535/49557550781_c7f852d26f_b.jpg" alt="">
+        <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="https://live.staticflickr.com/65535/49557550781_c7f852d26f_b.jpg" alt="">
         <div class="intro-text left-0 text-center bg-faded p-5 rounded">
           <h2 class="section-heading mb-4">
             <span class="section-heading-upper">Fresh Coffee</span>
