--- a/about.html
+++ b/about.html
@@ -70,6 +70,7 @@
               </h2>
               <p>Aquí va algo de texto.</p>
               <p class="mb-0">Aquí puede ir más texto.</p>
+              <p class="mb-0">Aquí puede ir más texto.</p>
             </div>
           </div>
         </div>
