--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             <span class="section-heading-upper">¿Qué es el</span>
             <span class="section-heading-lower">SARS-CoV-2?</span>
           </h2>
+          <p class="mb-3">Aquí puede ir más texto.</p>
           <p class="mb-3">Aquí va el texto de la primera imagen - Yujuu!
           </p>
         
@@ -83,6 +84,7 @@
               <span class="section-heading-upper">¿Cómo se</span>
               <span class="section-heading-lower">Diagnostica?</span>
             </h2>
+            <p class="mb-0">Aquí puede ir más texto.</p>
             <p class="mb-0">Aquí va el texto del segundo recuadro!</p>
           </div>
         </div>
