--- a/about.html
+++ b/about.html
@@ -61,6 +61,14 @@
     <div class="container">
       <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="img/about.jpg" alt="">
       <div class="about-heading-content">
+        <div class="product-item-title d-flex">
+          <div class="bg-faded p-5 d-flex ml-auto rounded">
+            <h2 class="section-heading mb-0">
+              <span class="section-heading-upper">Blended to Perfection</span>
+              <span class="section-heading-lower">Coffees &amp; Teas</span>
+            </h2>
+          </div>
+        </div>
         <div class="row">
           <div class="col-xl-9 col-lg-10 mx-auto">
             <div class="bg-faded rounded p-5">
@@ -75,6 +83,11 @@
           </div>
         </div>
       </div>
+      <div class="product-item-description d-flex mr-auto">
+          <div class="bg-faded p-5 rounded">
+            <p class="mb-0">We take pride in our work, and it shows. Every time you order a beverage from us, we guarantee that it will be an experience worth having. Whether it's our world famous Venezuelan Cappuccino, a refreshing iced herbal tea, or something as simple as a cup of speciality sourced black coffee, you will be coming back for more.</p>
+          </div>
+        </div>
     </div>
   </section>
 
