--- a/about.html
+++ b/about.html
@@ -75,6 +75,7 @@
           </div>
         </div>
       </div>
+      </section>
       <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/products-01.jpg" alt="">
     </div>
   </section>
