--- a/about.html
+++ b/about.html
@@ -74,9 +74,15 @@
             </div>
           </div>
         </div>
+        </section>
+       </div>
+        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/products-03.jpg" alt="">
+        <div class="product-item-description d-flex mr-auto">
+          <div class="bg-faded p-5 rounded">
+            <p class="mb-0">texto.</p>
+          </div>
+        </div>
       </div>
-      </section>
-      <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/products-01.jpg" alt="">
     </div>
   </section>
 
