--- a/store.html
+++ b/store.html
@@ -63,32 +63,9 @@
           <div class="col-xl-9 mx-auto">
             <div class="cta-inner text-center rounded">
               <h2 class="section-heading mb-5">
-                <span class="section-heading-upper">Creditos</span>
-                <span class="section-heading-lower">Bibliografía consultada</span>
+                <span class="section-heading-upper">Bibliografía</span>
               </h2>
-              <ul class="list-unstyled list-hours mb-5 text-left mx-auto">
-                <li class="list-unstyled-item list-hours-item d-flex">
-                  algo
-                </li>
-                <li class="list-unstyled-item list-hours-item d-flex">
-                  algo</span>
-                </li>
-                <li class="list-unstyled-item list-hours-item d-flex">
-                  algo</span>
-                </li>
-                <li class="list-unstyled-item list-hours-item d-flex">
-                  algo</span>
-                </li>
-                <li class="list-unstyled-item list-hours-item d-flex">
-                  algo</span>
-                </li>
-                <li class="list-unstyled-item list-hours-item d-flex">
-                  algo</span>
-                </li>
-                <li class="list-unstyled-item list-hours-item d-flex">
-                  algo</span>
-                </li>
-              </ul>
+              <p>Aquí va texto en vez de la lista :).</p>
               <p class="address mb-5">
                 <em>
                   <strong>Equipo Dinamita</strong>
@@ -117,13 +94,11 @@
             <div class="col-xl-9 col-lg-10 mx-auto">
               <div class="bg-faded rounded p-5">
                 <h2 class="section-heading mb-4">
-                  <span class="section-heading-upper">Strong Coffee, Strong Roots</span>
-                  <span class="section-heading-lower">About Our Cafe</span>
+                  <span class="section-heading-upper">Algún subtitulo</span>
+                  <span class="section-heading-lower">Sobre nosotros</span>
                 </h2>
-                <p>Founded in 1987 by the Hernandez brothers, our establishment has been serving up rich coffee sourced from artisan farmers in various regions of South and Central America. We are dedicated to travelling the world, finding the best coffee, and bringing back to you here in our cafe.</p>
-                <p class="mb-0">We guarantee that you will fall in
-                  <em>lust</em>
-                  with our decadent blends the moment you walk inside until you finish your last sip. Join us for your daily routine, an outing with friends, or simply just to enjoy some alone time.</p>
+                <p>Texto.</p>
+                <p class="mb-0">Agradecimiento o algo.</p>
               </div>
             </div>
           </div>
@@ -133,7 +108,7 @@
 
     <footer class="footer text-faded text-center py-5">
       <div class="container">
-        <p class="m-0 small">Copyright &copy; Your Website 2018</p>
+        <p class="m-0 small">Copyright &copy; Team Dinamita 2020</p>
       </div>
     </footer>
 
