--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
 
   <footer class="footer text-faded text-center py-5">
     <div class="container">
-      <p class="m-0 small">Copyright &copy; Your Website 2020</p>
+      <p class="m-0 small">Copyright &copy; Team Dinamita 2020</p>
     </div>
   </footer>
 
