--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
           <h2 class="section-heading mb-4">
             <span class="section-heading-upper">¿Qué es el</span>
             <span class="section-heading-lower">SARS-CoV-2?</span>
+          <div class="intro-text left-0 text-justify bg-faded p-5 rounded">
           </h2>
           <p class="mb-3">Aquí puede ir más texto.</p>
           <p class="mb-3">Como sabemos es un virus que causa una enfermedad respiratoria denominada COVID-19, su transmisión se produce por contacto directo o secresiones expulsadas a menos de 2 metros por el aire. Su periodo de incubación es de 5-14 días y dentro de la población con mas riesgo encontramos a personas de edad avanzada, personas con enfermedades cronicas o inmunodeprimidas.
@@ -83,6 +84,7 @@
             <h2 class="section-heading mb-4">
               <span class="section-heading-upper">¿Cómo se</span>
               <span class="section-heading-lower">Diagnostica?</span>
+            <div class="cta-inner text-justify rounded">
             </h2>
             <p class="mb-0">Existen diversas maneras de realizar el diagnóstico del SARS-CoV-2, sin embargo algunas aun están en estudio, no obstante existendos técnicas que han sido reconocidas por la OMS como pruebas diagnosticas y de detección temprena: 
             <p class="mb-0">qRT-PCR: Esta es una técnica del tipo molecular que nos muestra si el paciente tiene una infección activa de COVID-19 por medio de la detección de los genes del virus en muestras nasofaringeas tomadas del paciente.</p>
