--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
             </a>
           </li>
           <li class="nav-item active px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="about.html">Estadisticas</a>
+            <a class="nav-link text-uppercase text-expanded" href="about.html">Graficos</a>
           </li>
           <li class="nav-item px-lg-4">
             <a class="nav-link text-uppercase text-expanded" href="products.html">Tecnicas</a>
@@ -59,28 +59,35 @@
 
   <section class="page-section about-heading">
     <div class="container">
-      <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="img/about.jpg" alt="">
+      </section>
+    <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="blob:https://web.whatsapp.com/d16038aa-4e00-4c92-9547-eac5bcfe6a83" alt="">
       <div class="about-heading-content">
         <div class="row">
           <div class="col-xl-9 col-lg-10 mx-auto">
             <div class="bg-faded rounded p-5">
               <h2 class="section-heading mb-4">
-                <span class="section-heading-upper">Estadisticas relacionadas con el diagnóstico de</span>
-                <span class="section-heading-lower">SARS-CoV-2</span>
-              </h2>
-              <p>Aquí va algo de texto.</p>
-              <p class="mb-0">Aquí puede ir más texto.</p>
-              <p class="mb-0">Aquí puede ir más texto.</p>
+                <span class="section-heading-upper">Espectrometro de masas MALDI-MS</span>
+               </h2>
+              <p>Al lado izquierdo en color naranja podemos observar el espectro obtenido de una muestra de mucosa nasal de paciente que padece SARS-CoV-2.</p>
+              <p class="mb-0">Al lado derecho e color azul observamos el espectro obtenido de una muestra de mucosa nasal de paciente ubicado en el rango control.</p>
+              <p>Es notoria la diferencia entre ambos gráficos al hacer la comparacion entre los datos obtenidos del paciente control y los del paciente enfermo, gracias a ello y al acceso de bases de datos es que se realiza la deteccion oportuna de SARS-CoV-2 mediente la técnica de espectrometría de masas.</p>
             </div>
           </div>
         </div>
         </section>
        </div>
-        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/products-03.jpg" alt="">
-        <div class="product-item-description d-flex mr-auto">
-          <div class="bg-faded p-5 rounded">
-            <p class="mb-0">texto.</p>
+        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="blob:https://web.whatsapp.com/e8262100-7c9d-4136-972f-d0fecd02ef06" alt="">
+        <div class="about-heading-content">
+        <div class="row">
+          <div class="col-xl-9 col-lg-10 mx-auto">
+            <div class="bg-faded rounded p-5">
+              <h2 class="section-heading mb-4">
+                <span class="section-heading-upper text-uppercase-lowercase">TECNICA DE qRT-PCR</span>
+               </h2>
+              <p>En la imagen podemos observar la variación de la viremia y los niveles de inmunoglobulinas a lo largo de la enfermedad y su relación con los resultados de los test de diagnóstico.</p>
+            </div>
           </div>
+        </div>
         </div>
   </section>
       </div>
