--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
   <section class="page-section about-heading">
     <div class="container">
       </section>
-    <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="blob:https://web.whatsapp.com/d16038aa-4e00-4c92-9547-eac5bcfe6a83" alt="">
+    <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/blob:https://web.whatsapp.com/d16038aa-4e00-4c92-9547-eac5bcfe6a83" alt="">
       <div class="about-heading-content">
         <div class="row">
           <div class="col-xl-9 col-lg-10 mx-auto">
@@ -74,9 +74,9 @@
             </div>
           </div>
         </div>
-        </section>
        </div>
-        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="blob:https://web.whatsapp.com/e8262100-7c9d-4136-972f-d0fecd02ef06" alt="">
+    </section>
+        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/blob:https://web.whatsapp.com/e8262100-7c9d-4136-972f-d0fecd02ef06" alt="">
         <div class="about-heading-content">
         <div class="row">
           <div class="col-xl-9 col-lg-10 mx-auto">
