--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
         </div>
        </div>
     </section>
-        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/blob:https://web.whatsapp.com/e8262100-7c9d-4136-972f-d0fecd02ef06" alt="">
+        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/https://github.com/VicktoriaCM/CdeCMx-Challenge/blob/master/WhatsApp%20Image%202020-08-14%20at%2023.03.34%20(1).jpeg" alt="">
         <div class="about-heading-content">
         <div class="row">
           <div class="col-xl-9 col-lg-10 mx-auto">
