--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
   <section class="page-section about-heading">
     <div class="container">
       </section>
-    <img width='270' height='150' src='file://Z:/fotos_herramientas/WhatsApp Image 2020-08-14 at 23.03.34.jpg' alt='imagen herramienta' >
+    <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="https://github.com/VicktoriaCM/CdeCMx-Challenge/blob/master/WhatsApp%20Image%202020-08-14%20at%2023.03.34.jpeg?raw=true" alt="">
       <div class="about-heading-content">
         <div class="row">
           <div class="col-xl-9 col-lg-10 mx-auto">
@@ -76,7 +76,7 @@
         </div>
        </div>
     </section>
-        <img width='270' height='150' src='file://Z:/fotos_herramientas/WhatsApp Image 2020-08-14 at 23.03.34 (1).jpg' alt='imagen herramienta' >
+        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="https://github.com/VicktoriaCM/CdeCMx-Challenge/blob/master/WhatsApp%20Image%202020-08-14%20at%2023.03.34%20(1).jpeg?raw=true" alt="">
         <div class="about-heading-content">
         <div class="row">
           <div class="col-xl-9 col-lg-10 mx-auto">
