--- a/about.html
+++ b/about.html
@@ -59,7 +59,9 @@
 
   <section class="page-section about-heading">
     <div class="container">
-      </section>
+      <section class="page-section about-heading">
+    <div class="container">
+      </div></section>
     <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="https://github.com/VicktoriaCM/CdeCMx-Challenge/blob/master/WhatsApp%20Image%202020-08-14%20at%2023.03.34.jpeg?raw=true" alt="">
       <div class="about-heading-content">
         <div class="row">
@@ -71,11 +73,15 @@
               <p>Al lado izquierdo en color naranja podemos observar el espectro obtenido de una muestra de mucosa nasal de paciente que padece SARS-CoV-2.</p>
               <p class="mb-0">Al lado derecho e color azul observamos el espectro obtenido de una muestra de mucosa nasal de paciente ubicado en el rango control.</p>
               <p>Es notoria la diferencia entre ambos gráficos al hacer la comparacion entre los datos obtenidos del paciente control y los del paciente enfermo, gracias a ello y al acceso de bases de datos es que se realiza la deteccion oportuna de SARS-CoV-2 mediente la técnica de espectrometría de masas.</p>
+              
+              <p>Imagen tomada de: Detection of SARS-CoV-2 in nasal swabs using MALDI-MS.</p>
             </div>
           </div>
         </div>
        </div>
-    </section>
+    <section class="page-section about-heading">
+    <div class="container">
+      </div></section>
         <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="https://github.com/VicktoriaCM/CdeCMx-Challenge/blob/master/WhatsApp%20Image%202020-08-14%20at%2023.03.34%20(1).jpeg?raw=true" alt="">
         <div class="about-heading-content">
         <div class="row">
@@ -85,11 +91,15 @@
                 <span class="section-heading-upper text-uppercase-lowercase">TECNICA DE qRT-PCR</span>
                </h2>
               <p>En la imagen podemos observar la variación de la viremia y los niveles de inmunoglobulinas a lo largo de la enfermedad y su relación con los resultados de los test de diagnóstico.</p>
+              
+              <p>Imagen tomada de: Diagnóstico por el laboratorio del virus SARS-CoV-2 agente de la infección COVID-19.</p>
             </div>
           </div>
         </div>
         </div>
-  </section>
+  <section class="page-section about-heading">
+    <div class="container">
+      </div></section>
       </div>
     </div>
   </section>
