--- a/index.html
+++ b/index.html
@@ -88,8 +88,9 @@
             <div class="cta-inner text-justify rounded">
               <p class="mb-0">Existen diversas maneras de realizar el diagnóstico del SARS-CoV-2, sin embargo algunas aun están en estudio, no obstante existendos técnicas que han sido reconocidas por la OMS como pruebas diagnosticas y de detección temprena: 
              <ul>
-              <il> class="mb-0">qRT-PCR: Esta es una técnica del tipo molecular que nos muestra si el paciente tiene una infección activa de COVID-19 por medio de la detección de los genes del virus en muestras nasofaringeas tomadas del paciente.</il>
-            <il> class="mb-0">Anticuerpos: Tambien se les denomina pruebas rápidas, en este caso lo que se busca son los anticuerpos que son producidos por el sistema inmunológico en respuesta a la presencia del virus. Este tipo de pruebas no se deben utilizar para diagnósticar una infección activa debido a su probabilidad de error. </il>
+              <il> qRT-PCR: Esta es una técnica del tipo molecular que nos muestra si el paciente tiene una infección activa de COVID-19 por medio de la detección de los genes del virus en muestras nasofaringeas tomadas del paciente.</il>
+               
+              <il> Anticuerpos: Tambien se les denomina pruebas rápidas, en este caso lo que se busca son los anticuerpos que son producidos por el sistema inmunológico en respuesta a la presencia del virus. Este tipo de pruebas no se deben utilizar para diagnósticar una infección activa debido a su probabilidad de error. </il>
               </ul>
                       </div>
         </div>
