--- a/about.html
+++ b/about.html
@@ -63,11 +63,13 @@
     <div class="container">
       </div></section>
     <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="https://github.com/VicktoriaCM/CdeCMx-Challenge/blob/master/WhatsApp%20Image%202020-08-14%20at%2023.03.34.jpeg?raw=true" alt="">
+      <section class="page-section about-heading">
+    <div class="container">
+      </div></section>
       <div class="about-heading-content">
         <div class="row">
           <div class="col-xl-9 col-lg-10 mx-auto">
             <div class="bg-faded rounded p-5">
-              
               <h2 class="section-heading mb-4">
                 <span class="section-heading-upper">Espectrometro de masas MALDI-MS</span>
                </h2>
@@ -85,7 +87,10 @@
     <div class="container">
       </div></section>
         <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="https://github.com/VicktoriaCM/CdeCMx-Challenge/blob/master/WhatsApp%20Image%202020-08-14%20at%2023.03.34%20(1).jpeg?raw=true" alt="">
-        <div class="about-heading-content">
+      <section class="page-section about-heading">
+    <div class="container">
+      </div></section>  
+      <div class="about-heading-content">
         <div class="row">
           <div class="col-xl-9 col-lg-10 mx-auto">
             <div class="bg-faded rounded p-5">
