--- a/products.html
+++ b/products.html
@@ -63,8 +63,7 @@
         <div class="product-item-title d-flex">
           <div class="bg-faded p-5 d-flex ml-auto rounded">
             <h2 class="section-heading mb-0">
-              <span class="section-heading-upper">Tecnica 1</span>
-              <span class="section-heading-lower">Espectrometria de masas MALDI-MS</span>
+              <span class="section-heading-upper">Espectrometria de masas MALDI-MS</span>
             </h2>
           </div>
         </div>
@@ -84,8 +83,7 @@
         <div class="product-item-title d-flex">
           <div class="bg-faded p-5 d-flex mr-auto rounded">
             <h2 class="section-heading mb-0">
-              <span class="section-heading-upper">Tecnica 2</span>
-              <span class="section-heading-lower text-uppercase-lowercase">qRT-PCR</span>
+              <span class="section-heading-upper">Quantitative Real-Time Polymerase Chain Reaction</span>
             </h2>
           </div>
         </div>
