--- a/products.html
+++ b/products.html
@@ -100,14 +100,26 @@
   <section class="page-section">
     <div class="container">
       <div class="product-item">
-        <div class="product-item-title d-flex">
-          <div class="bg-faded p-5 d-flex ml-auto rounded">
-            <h2 class="section-heading mb-0">
-              <span class="section-heading-upper">subtitulo</span>
-              <span class="section-heading-lower">titulo</span>
-            </h2>
+        <section class="page-section about-heading">
+    <div class="container">
+      </div></section>
+        <div class="about-heading-content">
+        <div class="row">
+          <div class="col-xl-9 col-lg-10 mx-auto">
+            <div class="bg-faded rounded p-5">
+              <h2 class="section-heading mb-4">
+                <span class="section-heading-upper">Espectrometro de masas MALDI-MS</span>
+               </h2>
+              <p>Al lado izquierdo en color naranja podemos observar el espectro obtenido de una muestra de mucosa nasal de paciente que padece SARS-CoV-2.</p>
+              <p class="mb-0">Al lado derecho e color azul observamos el espectro obtenido de una muestra de mucosa nasal de paciente ubicado en el rango control.</p>
+              <p>Es notoria la diferencia entre ambos gráficos al hacer la comparacion entre los datos obtenidos del paciente control y los del paciente enfermo, gracias a ello y al acceso de bases de datos es que se realiza la deteccion oportuna de SARS-CoV-2 mediente la técnica de espectrometría de masas.</p>
+              
+              <p>Imagen tomada de: Detection of SARS-CoV-2 in nasal swabs using MALDI-MS.</p>
+            
+            </div>
           </div>
         </div>
+       </div>
         <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/products-03.jpg" alt="">
         <div class="product-item-description d-flex mr-auto">
           <div class="bg-faded p-5 rounded">
