--- a/products.html
+++ b/products.html
@@ -108,24 +108,16 @@
           <div class="col-xl-9 col-lg-10 mx-auto">
             <div class="bg-faded rounded p-5">
               <h2 class="section-heading mb-4">
-                <span class="section-heading-upper">Espectrometro de masas MALDI-MS</span>
+                <span class="section-heading-upper">Comparación de ambas técnicas</span>
                </h2>
-              <p>Al lado izquierdo en color naranja podemos observar el espectro obtenido de una muestra de mucosa nasal de paciente que padece SARS-CoV-2.</p>
-              <p class="mb-0">Al lado derecho e color azul observamos el espectro obtenido de una muestra de mucosa nasal de paciente ubicado en el rango control.</p>
-              <p>Es notoria la diferencia entre ambos gráficos al hacer la comparacion entre los datos obtenidos del paciente control y los del paciente enfermo, gracias a ello y al acceso de bases de datos es que se realiza la deteccion oportuna de SARS-CoV-2 mediente la técnica de espectrometría de masas.</p>
-              
-              <p>Imagen tomada de: Detection of SARS-CoV-2 in nasal swabs using MALDI-MS.</p>
-            
+              <p>Después de realizar el análisis entre ambas tecnicas nuetsra opinion es:</p>
+              <p class="mb-0">La tecnica de qRT-PCR es una técnica muy util y exacta que se ha utilizado durante ya un tiempo para hacer la detección oportuna del virus SARS-CoV-2 debido a que se trabaja con el material genético de este, sin embargo es una técnica costosa debido a los reactivos que se manejan a la hora de hacer el procedimiento y tardada debido altiempo de accion de termociclador. Por otro lado es una técnica muy certera que nos ofrece resultados claros sin necesidad de realizar métodos invasivos para la obtencion de muestra.</p>
+              <p>La tecnica de Espectrometría de masas es una tecnica muy precisa que nos ofrece reaultados en un tiempo muy corto debido a que se trabaja con proteínas haciendo uso de bases de datos que nos permiten obtener resultados mas claros y precisos, ademas de ello no es costosa lo cual lo hace mas accesible al público, además la toma demuestra es no invasiva para el paciente. Es por ello que optamos por la implemetación de esta técnica.</p>          
             </div>
           </div>
         </div>
        </div>
-        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/products-03.jpg" alt="">
-        <div class="product-item-description d-flex mr-auto">
-          <div class="bg-faded p-5 rounded">
-            <p class="mb-0">texto.</p>
-          </div>
-        </div>
+        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="https://github.com/VicktoriaCM/CdeCMx-Challenge/blob/master/Opera%20Captura%20de%20pantalla_2020-08-15_090846_onedrive.live.com.png?raw=true" alt="">
       </div>
     </div>
   </section>
