--- a/store.html
+++ b/store.html
@@ -97,8 +97,10 @@
                   <span class="section-heading-upper">Algún subtitulo</span>
                   <span class="section-heading-lower">Sobre nosotros</span>
                 </h2>
-                <p>Texto.</p>
-                <p class="mb-0">Agradecimiento o algo.</p>
+                <img src="img/IMG_20200802_235808.jpg" alt="nosotros" width="500" height="600">
+                <p class="mb-0">mikael</p>
+                <p class="mb-0">jotopzom</p>
+                <p class="mb-0">ramerosky</p>
               </div>
             </div>
           </div>
