--- a/store.html
+++ b/store.html
@@ -97,10 +97,20 @@
                   <span class="section-heading-upper">Algún subtitulo</span>
                   <span class="section-heading-lower">Sobre nosotros</span>
                 </h2>
-                <img src="img/IMG_20200802_235808.jpg" alt="nosotros" width="500" height="600">
-                <p class="mb-0">mikael</p>
-                <p class="mb-0">jotopzom</p>
-                <p class="mb-0">ramerosky</p>
+                <table style="width:100%">
+  <tr>
+    <img src="img/IMG_20200802_235808.jpg" alt="Girl in a jacket" width="500" height="600">
+    <td>ramiros</td>
+  </tr>
+  <tr>
+    <img src="img/IMG_20200802_235808.jpg" alt="Girl in a jacket" width="500" height="600">
+    <td>Litz</td>
+  </tr>
+<tr>
+    <img src="img/IMG_20200802_235808.jpg" alt="Girl in a jacket" width="500" height="600">
+    <td>Joo</td>
+  </tr>
+</table>
               </div>
             </div>
           </div>
