--- a/store.html
+++ b/store.html
@@ -99,15 +99,15 @@
                 </h2>
                 <table style="width:100%">
   <tr>
-    <img src="img/IMG_20200802_235808.jpg" alt="Girl in a jacket" width="500" height="600">
+    <td><img src="img/IMG_20200802_235808.jpg" alt="Girl in a jacket" width="500" height="600"></td>
     <td>ramiros</td>
   </tr>
   <tr>
-    <img src="img/IMG_20200802_235808.jpg" alt="Girl in a jacket" width="500" height="600">
+    <td><img src="img/IMG_20200802_235808.jpg" alt="Girl in a jacket" width="500" height="600"></td>
     <td>Litz</td>
   </tr>
 <tr>
-    <img src="img/IMG_20200802_235808.jpg" alt="Girl in a jacket" width="500" height="600">
+    <td><img src="img/IMG_20200802_235808.jpg" alt="Girl in a jacket" width="500" height="600"></td>
     <td>Joo</td>
   </tr>
 </table>
