--- a/store.html
+++ b/store.html
@@ -94,19 +94,22 @@
             <div class="col-xl-9 col-lg-10 mx-auto">
               <div class="bg-faded rounded p-5">
                 <h2 class="section-heading mb-4">
-                  <span class="section-heading-upper">Algún subtitulo</span>
-                  <span class="section-heading-lower">Sobre nosotros</span>
+                  <span class="section-heading-upper">integrantes del tim dinamita pum</span>
+                  <span class="section-heading-lower">nosotros</span>
                 </h2>
                 <table style="width:100%">
   <tr>
+<!-- cambiar src con la ruta que guardaste en la carpeta "img", así como cambiar los tamaños -->
     <td><img src="img/IMG_20200802_235808.jpg" alt="Girl in a jacket" width="500" height="600"></td>
     <td>ramiros</td>
   </tr>
   <tr>
+<!-- cambiar src con la ruta que guardaste en la carpeta "img", así como cambiar los tamaños -->
     <td><img src="img/IMG_20200802_235808.jpg" alt="Girl in a jacket" width="500" height="600"></td>
     <td>Litz</td>
   </tr>
 <tr>
+<!-- cambiar src con la ruta que guardaste en la carpeta "img", así como cambiar los tamaños -->
     <td><img src="img/IMG_20200802_235808.jpg" alt="Girl in a jacket" width="500" height="600"></td>
     <td>Joo</td>
   </tr>
