--- a/store.html
+++ b/store.html
@@ -100,17 +100,17 @@
                 <table style="width:100%">
   <tr>
 <!-- cambiar src con la ruta que guardaste en la carpeta "img", así como cambiar los tamaños -->
-    <td><img src="img/IMG_20200802_235808.jpg" alt="Girl in a jacket" width="500" height="600"></td>
+    <td><img   class="intro-img img-fluid mb-3 mb-lg-0 rounded"  src="img/IMG_20200802_235808.jpg" alt="Girl in a jacket" width="500" height="600"></td>
     <td>ramiros</td>
   </tr>
   <tr>
 <!-- cambiar src con la ruta que guardaste en la carpeta "img", así como cambiar los tamaños -->
-    <td><img src="img/IMG_20200802_235808.jpg" alt="Girl in a jacket" width="500" height="600"></td>
+    <td><img   class="intro-img img-fluid mb-3 mb-lg-0 rounded"  src="img/IMG_20200802_235808.jpg" alt="Girl in a jacket" width="500" height="600"></td>
     <td>Litz</td>
   </tr>
 <tr>
 <!-- cambiar src con la ruta que guardaste en la carpeta "img", así como cambiar los tamaños -->
-    <td><img src="img/IMG_20200802_235808.jpg" alt="Girl in a jacket" width="500" height="600"></td>
+    <td><img    class="intro-img img-fluid mb-3 mb-lg-0 rounded"   src="img/IMG_20200802_235808.jpg" alt="Girl in a jacket" width="500" height="600"></td>
     <td>Joo</td>
   </tr>
 </table>
