Cambio en los comentarios

--- a/store.html
+++ b/store.html
@@ -99,17 +99,17 @@
                 </h2>
                 <table style="width:100%">
   <tr>
-<!-- cambiar src con la ruta que guardaste en la carpeta "img", así como cambiar los tamaños -->
+<!-- cambiar src con la ruta que guardaste en la carpeta "img" -->
     <td><img   class="intro-img img-fluid mb-3 mb-lg-0 rounded"  src="img/IMG_20200802_235808.jpg" alt="Girl in a jacket"></td>
     <td>ramiros</td>
   </tr>
   <tr>
-<!-- cambiar src con la ruta que guardaste en la carpeta "img", así como cambiar los tamaños -->
+<!-- cambiar src con la ruta que guardaste en la carpeta "img" -->
     <td><img   class="intro-img img-fluid mb-3 mb-lg-0 rounded"  src="img/IMG_20200802_235808.jpg" alt="Girl in a jacket"></td>
     <td>Litz</td>
   </tr>
 <tr>
-<!-- cambiar src con la ruta que guardaste en la carpeta "img", así como cambiar los tamaños -->
+<!-- cambiar src con la ruta que guardaste en la carpeta "img" -->
     <td><img    class="intro-img img-fluid mb-3 mb-lg-0 rounded"   src="img/IMG_20200802_235808.jpg" alt="Girl in a jacket"></td>
     <td>Joo</td>
   </tr>
