--- a/index.html
+++ b/index.html
@@ -82,16 +82,16 @@
         <div class="col-xl-9 mx-auto">
           <div class="cta-inner text-center rounded">
             <h2 class="section-heading mb-4">
-              <span class="section-heading-upper">¿Cómo se</span>
-              <span class="section-heading-lower">Diagnostica?</span>
+              <span class="section-heading-upper">nuestro</span>
+              <span class="section-heading-lower">proyecto</span>
             </h2>
             <div class="cta-inner text-justify rounded">
-              <p class="mb-0">Existen diversas maneras de realizar el diagnóstico del SARS-CoV-2, sin embargo algunas aun están en estudio, no obstante existendos técnicas que han sido reconocidas por la OMS como pruebas diagnosticas y de detección temprena: 
+              <p class="mb-0">El objetivo de nuestro proyecto es hacer la comparacion entre dos tecnicas diferentes utilizadas para el diagnostico oportuno del virus SARS-CoV-2. En este proyecto se trabajó con las técnicas de Espectrometría de masas y qRT-PCR, se hizo una tabla comparativa con las caracteristicas de ambas especificando cuales son los puntos fuertes de cada una, la accesibilidad, costo, entre otras caracteristicas. 
              <ul>
-              <il> qRT-PCR: Esta es una técnica del tipo molecular que nos muestra si el paciente tiene una infección activa de COVID-19 por medio de la detección de los genes del virus en muestras nasofaringeas tomadas del paciente.</il>
+              <il> qRT-PCR: Esta es una técnica del tipo molecular que nos muestra si el paciente tiene una infección activa de COVID-19 por medio de la detección de los genes del virus en muestras nasofaríngeas tomadas del paciente.</il>
               </ul>
               <ul>
-              <il> Anticuerpos: Tambien se les denomina pruebas rápidas, en este caso lo que se busca son los anticuerpos que son producidos por el sistema inmunológico en respuesta a la presencia del virus. Este tipo de pruebas no se deben utilizar para diagnósticar una infección activa debido a su probabilidad de error. </il>
+              <il> Espectrometría de masas: Esta técnica trabaja con proteinas aisladas de muestras nasofaríngeas, lo cual lo hace una técnica no invasiva y con una alta especificidad, nos permite identificar si el paciente tiene una infección activa o si es propenso a padecer la enfermedad por medio de la cuantificación de proteinas del virus y su relacion masa carga utilizando informacion de bases de datos como control para hacer la comparacion muestra/control. </il>
               </ul>
                       </div>
         </div>
