--- a/store.html
+++ b/store.html
@@ -63,15 +63,22 @@
           <div class="col-xl-9 mx-auto">
             <div class="cta-inner text-center rounded">
               <h2 class="section-heading mb-5">
-                <span class="section-heading-upper">Bibliografía</span>
+                <span class="section-heading-upper">Bibliografía Consultada</span>
+                <div class="cta-inner text-justify rounded">
               </h2>
-              <p>Aquí va texto en vez de la lista :).</p>
-              <p class="address mb-5">
+              <p>Científicos de U. Autónoma y U. Talca descubren técnica más rápida para detectar Coronavirus. (s. f.). Universidad Autonoma de Chile. Recuperado 13 de agosto de 2020, de https://www.uautonoma.cl/news/cientificos-de-u-autonoma-y-u-talca-descubren-nuevo-metodo-de-diagnostico-de-covid-19-con-tecnica-mas-rapida-que-pcr</p>
+              <p>Cárdenas-Bravo L, Cabrera-Rayo A, Pérez-Barragán E, Márquez-Díaz F y col. Recursos diagnósticos en la infección por SARS-CoV-2. Med Int Méx. 2020;36(Suplemento 2):S26-S28. https://doi.org/10.24245/mim. V36id.4194 https://www.nature.com/articles/s41587-020-06</p>
+              <p>EN Nikolaev., MI Indeykina., AG Brzhozovskiy., AE Bugrova., AS Kononikhin., NL Starodubtseva., EV Petrotchenko., G Kovalev., CH Borchers., GT Sukhikh. (2020). Mass Spectrometric detection of SARS-CoV-2 virus in scrapings of the epithelium of the nasopharynx of infected patients via Nucleocapsid N protein. Consultado en 08/13/2020 en https://www.biorxiv.org/content/10.1101/2020.05.24.113043v1.full.</p>
+              <p>Nachtigall, F. M. (2020, 30 julio). Detection of SARS-CoV-2 in nasal swabs using MALDI-MS. Nature Biotechnology. https://www.nature.com/articles/s41587-020-0644-7?error=cookies_not_supported&code=61cd2cce-3a66-47cd-8796-691374b00ec5</p>
+              <p>Net InterLab S. A. (2020). ¿Cómo identificar proteínas por espectrometría de masas?. Consultado en 08/13/2020 en https://net-interlab.es/espectrometria-de-masas-proteinas/.</p>
+              <p>Universidad Autónoma de Chile (2020). Científicos de UAutónoma y UTalca descubren nuevo método de diagnóstico de COVID-19 con técnica más rápida que PCR. Consultado en 08/13/2020 en https://www.uautonoma.cl/news/cientificos-de-u-autonoma-y-u-talca-descubren-nuevo-metodo-de-diagnostico-de-covid-19-con-tecnica-mas-rapida-que-pcr/.</p>
+              <p>Universidad de Córdoba. Unidad de Proteómica (2018). Identificación proteínas por espectrometría de masas MALDI TOF-TOF. Consultado en 08/13/2020 en https://www.uco.es/investigacion/portal/images/documentos/scai/equipamiento_proteomica/PROTEOMICA-Ficha_Tecnica-MALDI__TOF-TOF_v3.pdf.</p>
+              <p>Tebar-Ferreia, P. (2018). Identificación proteínas por espectrometría de masas. Equipamento. Consultado en 08/13/2020 en https://silo.tips/download/identificacion-de-proteinas-por-espectrometria-de-masas-equipamiento#.</p>
+              <p>Trilla, A., Vieta Pascual, E., Maria Peri, J., Rubinat, M., & Violan, M. (2020, 12 marzo). ¿Qué es el Coronavirus SARS-CoV-2? | Hospital. Clínic Barcelona. https://www.clinicbarcelona.org/asistencia/enfermedades/covid-19/definicion</p>
+               <p class="address mb-5">
                 <em>
-                  <strong>Equipo Dinamita</strong>
-                  <br>
-                  Nombres
-                </em>
+                  <strong>Equipo D-17</strong>
+                  </em>
               </p>
               <p class="mb-0">
                 <small>
@@ -88,31 +95,48 @@
 
     <section class="page-section about-heading">
       <div class="container">
-        <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="img/about.jpg" alt="">
+        <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="https://github.com/VicktoriaCM/CdeCMx-Challenge/blob/master/WhatsApp%20Image%202020-08-15%20at%2013.19.50.jpeg?raw=true" alt="">
         <div class="about-heading-content">
           <div class="row">
             <div class="col-xl-9 col-lg-10 mx-auto">
               <div class="bg-faded rounded p-5">
                 <h2 class="section-heading mb-4">
-                  <span class="section-heading-upper">integrantes del tim dinamita pum</span>
-                  <span class="section-heading-lower">nosotros</span>
+                  <span class="section-heading-upper">Equipo D-17</span>
+                  <span class="section-heading-lower">Conocenos</span>
                 </h2>
                 <table style="width:100%">
   <tr>
 <!-- cambiar src con la ruta que guardaste en la carpeta "img" -->
-    <td><img   class="intro-img img-fluid mb-3 mb-lg-0 rounded"  src="img/IMG_20200802_235808.jpg" alt="Girl in a jacket"></td>
-    <td>ramiros</td>
+    <td><img   class="intro-img img-fluid mb-3 mb-lg-0 rounded"  src="https://github.com/VicktoriaCM/CdeCMx-Challenge/blob/master/WhatsApp%20Image%202020-08-15%20at%2012.49.06.jpeg?raw=true" alt="Girl in a jacket"></td>
+    <td>Gabriela Orona</td>
+    <td>Asesora</td>
+<!-- cambiar src con la ruta que guardaste en la carpeta "img" -->
+    <td><img   class="intro-img img-fluid mb-3 mb-lg-0 rounded"  src="https://github.com/VicktoriaCM/CdeCMx-Challenge/blob/master/WhatsApp%20Image%202020-08-15%20at%2012.47.42.jpeg?raw=true" alt="Girl in a jacket"></td>
+    <td>Diana García</td>
+    <td>Universidad de guanajuato</td>
+    <td>Lic. Químico Farmacéutico Biólogo, 3° Semestre.</td>
   </tr>
   <tr>
 <!-- cambiar src con la ruta que guardaste en la carpeta "img" -->
     <td><img   class="intro-img img-fluid mb-3 mb-lg-0 rounded"  src="img/IMG_20200802_235808.jpg" alt="Girl in a jacket"></td>
-    <td>Litz</td>
+    <td>Jessica Mares</td>
+    <td>Universidad Ibaroamericana de Leon</td>
+    <td>Ingenieria en Biotecnología, 5° Semestre</td>
   </tr>
 <tr>
 <!-- cambiar src con la ruta que guardaste en la carpeta "img" -->
-    <td><img    class="intro-img img-fluid mb-3 mb-lg-0 rounded"   src="img/IMG_20200802_235808.jpg" alt="Girl in a jacket"></td>
-    <td>Joo</td>
+    <td><img   class="intro-img img-fluid mb-3 mb-lg-0 rounded"  src="https://github.com/VicktoriaCM/CdeCMx-Challenge/blob/master/WhatsApp%20Image%202020-08-15%20at%2012.46.47.jpeg?raw=true" alt="Girl in a jacket"></td>
+    <td>Victor Gómez</td>
+    <td>Universidad Autonoma de México</td>
+    <td>Licenciatura en Química, 7° Semestre.</td>
   </tr>
+<tr>
+<!-- cambiar src con la ruta que guardaste en la carpeta "img" -->
+    <td><img    class="intro-img img-fluid mb-3 mb-lg-0 rounded"   src="https://github.com/VicktoriaCM/CdeCMx-Challenge/blob/master/WhatsApp%20Image%202020-08-15%20at%2012.46.47.jpeg?raw=true" alt="Girl in a jacket"></td>
+    <td>Melisza Córdova</td>
+    <td>Universidad De Sonora</td>
+    <td>Lic. Químico Biólogo Clínico, 7° Semestre.</td>
+    </tr>
 </table>
               </div>
             </div>
@@ -123,7 +147,7 @@
 
     <footer class="footer text-faded text-center py-5">
       <div class="container">
-        <p class="m-0 small">Copyright &copy; Team Dinamita 2020</p>
+        <p class="m-0 small">Copyright &copy; Team D-17 2020</p>
       </div>
     </footer>
 
