--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
           <h2 class="section-heading mb-4">
             <span class="section-heading-upper">¿Qué es el</span>
             <span class="section-heading-lower">SARS-CoV-2?</span>
-          <div class="intro-text left-0 text-justify bg-faded p-5 rounded">
           </h2>
           <div class="cta-inner text-justify rounded">
             <p class="mb-3">Como sabemos es un virus que causa una enfermedad respiratoria denominada COVID-19, su transmisión se produce por contacto directo o secresiones expulsadas a menos de 2 metros por el aire. Su periodo de incubación es de 5-14 días y dentro de la población con mas riesgo encontramos a personas de edad avanzada, personas con enfermedades cronicas o inmunodeprimidas.
@@ -86,12 +85,12 @@
               <span class="section-heading-lower">proyecto</span>
             </h2>
             <div class="cta-inner text-justify rounded">
-              <p class="mb-0">El objetivo de nuestro proyecto es hacer la comparacion entre dos tecnicas diferentes utilizadas para el diagnostico oportuno del virus SARS-CoV-2. En este proyecto se trabajó con las técnicas de Espectrometría de masas y qRT-PCR, se hizo una tabla comparativa con las caracteristicas de ambas especificando cuales son los puntos fuertes de cada una, la accesibilidad, costo, entre otras caracteristicas. 
+              <p class="mb-0">El objetivo de nuestro proyecto es hacer la comparacion entre dos técnicas utilizadas para el diagnóstico oportuno del virus SARS-CoV-2. En este proyecto se trabajó con las técnicas de Espectrometría de masas y qRT-PCR, se hizo una tabla comparativa con las caracteristicas de ambas especificando cuales son los puntos fuertes de cada una, la accesibilidad, costo, entre otras caracteristicas. 
              <ul>
               <il> qRT-PCR: Esta es una técnica del tipo molecular que nos muestra si el paciente tiene una infección activa de COVID-19 por medio de la detección de los genes del virus en muestras nasofaríngeas tomadas del paciente.</il>
               </ul>
               <ul>
-              <il> Espectrometría de masas: Esta técnica trabaja con proteinas aisladas de muestras nasofaríngeas, lo cual lo hace una técnica no invasiva y con una alta especificidad, nos permite identificar si el paciente tiene una infección activa o si es propenso a padecer la enfermedad por medio de la cuantificación de proteinas del virus y su relacion masa carga utilizando informacion de bases de datos como control para hacer la comparacion muestra/control. </il>
+              <il> Espectrometría de masas: Esta técnica trabaja con proteínas aisladas de muestras nasofaríngeas, lo cual lo hace una técnica no invasiva y con una alta especificidad, nos permite identificar si el paciente tiene una infección activa o si es propenso a padecer la enfermedad por medio de la cuantificación de proteínas del virus y su relación masa carga utilizando información de bases de datos como control para hacer la comparación muestra/control. </il>
               </ul>
                       </div>
         </div>
@@ -101,7 +100,7 @@
 
   <footer class="footer text-faded text-center py-5">
     <div class="container">
-      <p class="m-0 small">Copyright &copy; Team Dinamita 2020</p>
+      <p class="m-0 small">Copyright &copy; Team D-17 2020</p>
     </div>
   </footer>
 
